--- a/src/components/profile/Profile.module.css
+++ b/src/components/profile/Profile.module.css
@@ -1,11 +1,11 @@
 .profile {
-  max-width: 40%;
-  margin-top: 5vh;
+  /* max-width: 40%; */
+  margin-top: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  border-radius: 0.5rem;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 15px;
+  border-radius: 6px;
 }
 
 .description {
@@ -45,34 +45,26 @@
   list-style: none;
 }
 
-.stats > li {
+.statsItem {
   display: flex;
   flex-direction: column;
-  padding: 1rem 0;
-  font-size: 1.5rem;
-  text-align: center;
+  padding: 20px 0;
+  font-size: 20px;
+  justify-content: center;
+  align-items: center;
   border-top: 1px solid #d3d5e3;
   background-color: rgba(241, 241, 241, 0.833);
 }
 
-.statsItemViews {
-  border-left: 1px solid #d3d5e3;
+.statsItem:not(:last-child) {
   border-right: 1px solid #d3d5e3;
 }
 
-.statsItemFollovers {
-  border-radius: 0 0 0 0.5rem;
-}
-
-.statsItemLikes {
-  border-radius: 0 0 0.5rem;
-}
-
 .label {
-  padding-bottom: 0.5rem;
+  padding-bottom: 10px;
   color: #8a8b8e;
 }
 .quantity {
   font-weight: bold;
-  border-radius: 0.5rem;
+  border-radius: 20px;
 }
