--- a/src/components/profile/Profile.module.css
+++ b/src/components/profile/Profile.module.css
@@ -1,6 +1,6 @@
 .profile {
   /* max-width: 40%; */
-  margin-top: 20px;
+  margin: 20px 0px;
   display: flex;
   flex-direction: column;
   align-items: center;
