--- a/src/components/statistics/Statistics.module.css
+++ b/src/components/statistics/Statistics.module.css
@@ -1,21 +1,20 @@
 .statistics {
-  /* max-width: 50%; */
-  margin-top: 20px;
+  padding: 20px 0px;
+  margin: 0px auto;
   display: flex;
   flex-direction: column;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 15px;
-  border-radius: 0.5rem;
+  border-radius: 4px;
 }
 
 .title {
-  margin: 0;
-  padding: 30px 70px;
+  margin: 30px 0px;
+  padding: 0px 70px;
   text-transform: uppercase;
   text-align: center;
   color: #000;
   font-weight: bold;
   font-size: 40px;
-  border-bottom: 1px solid #d3d5e3;
 }
 
 .statList {
@@ -25,7 +24,17 @@
   padding: 0;
   list-style: none;
 
-  gap: 0;
+  gap: 0px;
+}
+
+.statListWithoutTitle {
+  width: 426px;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+
+  gap: 0px;
 }
 
 .statItem {
@@ -36,6 +45,7 @@
   justify-content: center;
   align-items: center;
   text-shadow: 0 0 4px #000;
+  box-shadow: 0 0 2px rgb(91, 89, 89);
 }
 
 .statLabel {
