--- a/src/components/friends/FriendsList.module.css
+++ b/src/components/friends/FriendsList.module.css
@@ -19,19 +19,18 @@
   box-shadow: rgba(0, 0, 0, 0.4) 0px 5px 15px;
 }
 
-.online,
-.offline {
+.friendStatus {
   width: 20px;
   height: 20px;
   margin-right: 15px;
   border-radius: 50%;
 }
 
-.online {
+.true {
   background-color: green;
 }
 
-.offline {
+.false {
   background-color: red;
 }
 
